// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ValueButton /> should handle click event 1`] = `
<button
  className="css-dax1th"
  onClick={[Function]}
>
  somelabel
</button>
`;

exports[`<ValueButton /> should render as active 1`] = `
<button
  className="css-172rr27"
  onClick={[Function]}
>
  somelabel
</button>
`;

exports[`<ValueButton /> should render as inactive 1`] = `
<button
  className="css-dax1th"
  onClick={[Function]}
>
  somelabel
</button>
`;
